--- a/index.html
+++ b/index.html
@@ -24,71 +24,71 @@
         <br>
         <br>
         <br>
-        <div class="btn btn-secondary firstObjectContainer">
-            <h4 style="color: white;text-align: left;">1.  <span style="margin-left: 10px;">Test Image -</span></h4><br>
-            <img src="water_bottle.jpeg" width="200px" height="400px" style="float: left;margin-left: 30px;border-radius: 20px;">
-            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;">Output on <span style="color:purple;font-weight: bold;">GOOGLE LENS</span> - <span style="color: red;">Water Bottle</span></span>
-            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;">Output on <span style="color:purple;font-weight: bold;">MOBILENET</span> - <span style="color: red;">Water Bottle</span></span>
+        <div class="btn btn-secondary col-xs-12 firstObjectContainer">
+            <h4 style="color: white;text-align: left; " class="col-sm-4 col-xs-12">1.  <span style="margin-left: 10px;">Test Image -</span></h4><br>
+            <img src="water_bottle.jpeg" width="200px" height="400px" style="float: left;margin-left: 30px;border-radius: 20px;" class="img-responsive">
+            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;" class="col-sm-4 col-xs-12">Output on <span style="color:purple;font-weight: bold;">GOOGLE LENS</span> - <span style="color: red;">Water Bottle</span></span>
+            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;" class="col-sm-4 col-xs-12">Output on <span style="color:purple;font-weight: bold;">MOBILENET</span> - <span style="color: red;">Water Bottle</span></span>
             <hr>
             <br>
-             <span style="font-size: 25px;">Draw</span>
+             <span style="font-size: 25px;" class="col-xs-12">Draw</span>
         </div>
         <br>
         <br>
         <br>
-        <div class="btn btn-secondary firstObjectContainer">
-            <h4 style="color: white;text-align: left;">2.  <span style="margin-left: 10px;">Test Image -</span></h4><br>
-            <img src="shoes.jpeg" width="300px" height="300px" style="float: left;margin-left: 30px;border-radius: 20px;">
-            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;">Output on <span style="color:purple;font-weight: bold;">GOOGLE LENS</span> - <span style="color: red;">Under Amour Running Shoes Junior</span></span>
+        <div class="btn btn-secondary col-xs-12 firstObjectContainer">
+            <h4 style="color: white;text-align: left;" class="col-sm-4 col-xs-12">2.  <span style="margin-left: 10px;">Test Image -</span></h4><br>
+            <img src="shoes.jpeg" width="300px" height="300px" style="float: left;margin-left: 30px;border-radius: 20px;" class="img-responsive">
+            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;" class="col-sm-4 col-xs-12">Output on <span style="color:purple;font-weight: bold;">GOOGLE LENS</span> - <span style="color: red;">Under Amour Running Shoes Junior</span></span>
             <br>
             <br>
 
-            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;">Output on <span style="color:purple;font-weight: bold;">MOBILENET</span> - <span style="color: red;">Running Shoes</span></span>
+            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;" class="col-sm-4 col-xs-12">Output on <span style="color:purple;font-weight: bold;">MOBILENET</span> - <span style="color: red;">Running Shoes</span></span>
             <hr>
             <br>
-             <span style="font-size: 25px;">Google Len is more accurate</span>
+             <span style="font-size: 25px;" class="col-xs-12">Google Len is more accurate</span>
         </div>
         <br>
         <br>
         <br>
-        <div class="btn btn-secondary firstObjectContainer">
-            <h4 style="color: white;text-align: left;">3.  <span style="margin-left: 10px;">Test Image -</span></h4><br>
-            <img src="headphone.png" width="250px" height="400px" style="float: left;margin-left: 30px;border-radius: 20px;">
-            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;">Output on <span style="color:purple;font-weight: bold;">GOOGLE LENS</span> - <span style="color: red;">AUKEY Wireless Headphones</span></span>
+        <div class="btn btn-secondary col-xs-12 firstObjectContainer">
+            <h4 style="color: white;text-align: left;" class="col-sm-4 col-xs-12">3.  <span style="margin-left: 10px;">Test Image -</span></h4><br>
+            <img src="headphone.png" width="250px" height="400px" style="float: left;margin-left: 30px;border-radius: 20px;" class="img-responsive">
+            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;" class="col-sm-4 col-xs-12">Output on <span style="color:purple;font-weight: bold;">GOOGLE LENS</span> - <span style="color: red;">AUKEY Wireless Headphones</span></span>
             <br>
             <br>
-            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;">Output on <span style="color:purple;font-weight: bold;">MOBILENET</span> - <span style="color: red;">Sunglasses</span></span>
+            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;" class="col-sm-4 col-xs-12">Output on <span style="color:purple;font-weight: bold;">MOBILENET</span> - <span style="color: red;">Sunglasses</span></span>
             <hr>
             <br>
-             <span style="font-size: 25px;">Google Len is more accurate</span>
+             <span style="font-size: 25px;" class="col-xs-12">Google Len is more accurate</span>
         </div>
         <br>
         <br>
         <br>
-        <div class="btn btn-secondary firstObjectContainer">
-            <h4 style="color: white;text-align: left;">4.  <span style="margin-left: 10px;">Test Image -</span></h4><br>
-            <img src="owlShoftToy.jpeg" width="400px" height="300px" style="float: left;margin-left: 30px;border-radius: 20px;">
-            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;">Output on <span style="color:purple;font-weight: bold;">GOOGLE LENS</span> - <span style="color: red;">Anirollz Mochi Soft Toy</span></span>
+        <div class="btn btn-secondary col-xs-12 firstObjectContainer">
+            <h4 style="color: white;text-align: left;" class="col-sm-4 col-xs-12">4.  <span style="margin-left: 10px;">Test Image -</span></h4><br>
+            <img src="owlShoftToy.jpeg" width="400px" height="300px" style="float: left;margin-left: 30px;border-radius: 20px;" class="img-responsive">
+            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;" class="col-sm-4 col-xs-12">Output on <span style="color:purple;font-weight: bold;">GOOGLE LENS</span> - <span style="color: red;">Anirollz Mochi Soft Toy</span></span>
             <br>
             <br>
-            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;">Output on <span style="color:purple;font-weight: bold;">MOBILENET</span> - <span style="color: red;">Piggy bank</span></span>
+            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;" class="col-sm-4 col-xs-12">Output on <span style="color:purple;font-weight: bold;">MOBILENET</span> - <span style="color: red;">Piggy bank</span></span>
             <hr>
             <br>
-             <span style="font-size: 25px;">Google Len is more accurate</span>
+             <span style="font-size: 25px;" class="col-xs-12">Google Len is more accurate</span>
         </div>
         <br>
         <br>
         <br>
-        <div class="btn btn-secondary firstObjectContainer">
-            <h4 style="color: white;text-align: left;">5.  <span style="margin-left: 10px;">Test Image -</span></h4><br>
-            <img src="bed.jpg" width="500px" height="400px" style="float: left;margin-left: 30px;border-radius: 20px;">
-            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;">Output on <span style="color:purple;font-weight: bold;">GOOGLE LENS</span> - <span style="color: red;">Confoter</span></span>
+        <div class="btn btn-secondary col-xs-12 firstObjectContainer">
+            <h4 style="color: white;text-align: left;" class="col-sm-4 col-xs-12">5.  <span style="margin-left: 10px;">Test Image -</span></h4><br>
+            <img src="bed.jpg" width="500px" height="400px" style="float: left;margin-left: 30px;border-radius: 20px;" class="img-responsive">
+            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;" class="col-sm-4 col-xs-12">Output on <span style="color:purple;font-weight: bold;">GOOGLE LENS</span> - <span style="color: red;">Confoter</span></span>
             <br>
             <br>
-            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;">Output on <span style="color:purple;font-weight: bold;">MOBILENET</span> - <span style="color: red;">Day Bed</span></span>
+            <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;" class="col-sm-4 col-xs-12">Output on <span style="color:purple;font-weight: bold;">MOBILENET</span> - <span style="color: red;">Day Bed</span></span>
             <hr>
             <br>
-             <span style="font-size: 25px;">MobileNet is more accurate</span>
+             <span style="font-size: 25px;" class="col-xs-12">MobileNet is more accurate</span>
         </div>
         <br>
         <br>
