--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;" class="col-sm-4 col-xs-12">Output on <span style="color:purple;font-weight: bold;">MOBILENET</span> - <span style="color: red;">Running Shoes</span></span>
             <hr>
             <br>
-             <span style="font-size: 25px;" class="col-xs-12">Google Len is more accurate</span>
+             <span style="font-size: 25px;" class="col-xs-12">Google Lens is more accurate</span>
         </div>
         <br>
         <br>
@@ -60,7 +60,7 @@
             <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;" class="col-sm-4 col-xs-12">Output on <span style="color:purple;font-weight: bold;">MOBILENET</span> - <span style="color: red;">Sunglasses</span></span>
             <hr>
             <br>
-             <span style="font-size: 25px;" class="col-xs-12">Google Len is more accurate</span>
+             <span style="font-size: 25px;" class="col-xs-12">Google Lens is more accurate</span>
         </div>
         <br>
         <br>
@@ -74,7 +74,7 @@
             <span style="background-color: white;border-radius: 20px; padding: 10px;color: black;font-size: 20px;" class="col-sm-4 col-xs-12">Output on <span style="color:purple;font-weight: bold;">MOBILENET</span> - <span style="color: red;">Piggy bank</span></span>
             <hr>
             <br>
-             <span style="font-size: 25px;" class="col-xs-12">Google Len is more accurate</span>
+             <span style="font-size: 25px;" class="col-xs-12">Google Lens is more accurate</span>
         </div>
         <br>
         <br>
